--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+ @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 #yes{
     position: absolute;
     left: 41%;
