--- a/style.css
+++ b/style.css
@@ -46,24 +46,29 @@ button{
     margin-top: 6%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
+	p{
+		font-size: 30px;
+		padding: 1px;
+	}
+    
+	img{
+        	max-height: 100px;
+        	border-radius: 10px;
+    	}
 
-    img{
-        min-height: 100px;
-        border-radius: 10px;
-    }
+    	body{
+        	font-weight: 100;
+        	font-family: 'Varela Round', sans-serif;
+		background-color: blue;
+    	}
 
-    body{
-        font-weight: 100;
-        font-family: 'Varela Round', sans-serif;
-    }
+    	#yes{
+        	position: absolute;
+       	 	left: 20%;
+    	}
 
-    #yes{
-        position: absolute;
-        left: 20%;
-    }
-
-    button{
-        font-family: 'Varela Round', sans-serif;
-    }
+    	button{
+        	font-family: 'Varela Round', sans-serif;
+    	}
 }
