--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ button{
     margin-top: 6%;
 }
 
-@media only screen and (min-width: 400px) {
+@media only screen and (max-width: 400px) {
 	p{
 		font-size: 30px;
 		padding: 1px;
