--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ div{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    min-height: 240px;
+    max-height: 240px;
     border-radius: 20px;
 }
 
@@ -46,14 +46,14 @@ button{
     margin-top: 6%;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 500px) {
 	p{
-		font-size: 30px;
+		font-size: 20px;
 		padding: 1px;
 	}
     
 	img{
-        	max-height: 100px;
+        	height: 50px;
         	border-radius: 10px;
     	}
 
