--- a/style.css
+++ b/style.css
@@ -101,3 +101,100 @@ footer{
     font-weight: bold;
     font-size: 60%;
 }
+
+@media only screen and (min-width: 400px){
+    #hands{
+        left: 31%;
+        top: 36%;
+    }
+
+    #noChoice{
+        top: 15%;
+        left: 25%;
+    }
+}
+
+@media only screen and (min-width: 1020px){
+    #question{
+        margin-top: 17%;
+        font-family: 'Varela Round', sans-serif;
+        word-spacing: 1.4px;
+        font-size: 25px;
+    }
+
+    #p{
+        margin-top: 1%;
+    }
+
+    #button{
+        margin: 1% 23% 0% 29%;
+    }
+
+    button{
+        font-weight: bold;
+        font-family: 'Varela Round', sans-serif;
+        border: 2px solid rgb(253, 59, 59);
+        margin: 0% -26% 0% 19%;
+        border-radius: 10px;
+        padding: 7px 27px;
+    }
+
+    .pic{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-height: 100%;
+        border-radius: 20px;
+    }
+
+    #hands{
+        left: 40%;
+        top: 68%;
+    }
+    
+    .pics{
+        max-height: 50vh;
+        border-radius: 20px;
+    }
+
+    #noChoice{
+        top: 33%;
+        left: 38%;
+        height: 10em;
+    }
+
+    #crying{
+        height: 12em;
+        width: auto;
+    }
+
+    #cgeNa{
+        height: 10em;
+        right: 2%;
+    }
+
+    #payagKana{
+        height: 13em;
+    }
+
+    #please{
+        height: 13em;
+        left: 63%;
+        top: 67%;
+    }
+
+    #suicide{
+        height: 10em;
+        left: 5em;
+        top: 14em;
+    }
+
+    footer{
+        left: 42%;
+    }
+
+    #sakitAydol{
+            left: 7%;
+            top: 60%;
+    }
+}
