--- a/style.css
+++ b/style.css
@@ -113,6 +113,85 @@ footer{
         left: 25%;
     }
 }
+@media only screen and (min-width: 840px){
+        .pics{
+            max-height: 50vh;
+        }    
+    
+        #question{
+            margin-top: 13%;
+            font-size: 30px;
+        }
+
+        #aydol{
+            max-height: 500px;
+        }
+
+        #button{
+            margin: 1% 21% 0% 41%;
+        }
+
+        button{
+            padding: 1% 3%;
+            font-size: 20px;
+            margin: 0% 29% 0% -1%;
+        }
+
+        #no{
+            padding: 3px 13px;
+        }
+
+        #hands{
+            top: 70%;
+            left: 41%;
+        }
+
+        #noChoice{
+            top: 29%;
+            left: 41%;
+            height: 170px;
+        }
+
+        #crying{
+            height: 200px;
+            width: auto;
+        }
+
+        #cgeNa{
+            height: 200px;
+            top: 2%;
+            right: 6%;
+        }
+
+        #please{
+            height: 200px;
+            bottom: 2%;
+            left: 60%;
+        }
+
+        #sakitAydol{
+            height: 200px;
+            bottom: 1%;
+            left: 3%;
+        }
+
+        #suicide{
+            height: 200px;
+            top: 8%;
+            left: 29%;
+        }
+
+        #payagKana{
+            height: 200px;
+            bottom: 34%;
+            left: 73%;
+        }
+
+        footer{
+            left: 42%;
+        }
+}
+
 
 @media only screen and (min-width: 1440px){
     #question{
