--- a/designFunctions/style.css
+++ b/designFunctions/style.css
@@ -31,6 +31,13 @@
     box-shadow: 11px 13px 30px;
     max-width: 100%;
     cursor: pointer;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+#btn.show{
+    opacity: 0;
+    pointer-events: none;
 }
 
 #container{
