--- a/designFunctions/style.css
+++ b/designFunctions/style.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+#icon{
+    border-radius: 5px;
+}
+
 #bodyContainer{
     display: flex;
     width: 100%;
@@ -28,11 +32,19 @@
     border: 2px solid rgb(18, 18, 18);
     background: rgb(193, 193, 193);
     color: black;
-    box-shadow: 11px 13px 30px;
+    box-shadow: 11px 13px 30px black;
     max-width: 100%;
     cursor: pointer;
     opacity: 1;
     pointer-events: auto;
+}
+
+#btn:hover{
+    margin-bottom: 10px;
+    color: white;
+    background-color: rgb(67, 67, 255);
+    border-color: white;
+    box-shadow: 0px 22px 25px black;
 }
 
 #btn.show{
@@ -43,7 +55,7 @@
 #container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     box-sizing: border-box;
     max-width: 75%;
     background-color: white;
@@ -74,8 +86,9 @@
     justify-content: end;
     width: 105%;
     padding: 10px 0 15px;
-    pointer-events: auto;
 }
+
+
 
 #closebtn button{
     padding: 1px 3px;
@@ -103,5 +116,37 @@ audio{
 
     100%{
         background-position: 0 50%;
+    }
+}
+
+@media  screen and (max-width: 100vw) {
+    #container{
+        width: 40vw;
+        height: 40vh;
+        max-width: 100%;
+    }
+
+    #closebtn{
+        padding: 10px 0 ;
+        width: 100%;
+    }
+
+
+    #closebtn button{
+        padding: 5px 10px;
+        border-radius: 5px;
+        font-size: 20px;
+        cursor: pointer;
+    }
+
+    #closebtn button:hover{
+        color: white;
+        background-color: black;
+        border-color: black;
+    }
+
+    #container p{
+        font-size: 22px;
+        font-weight: bold;
     }
 }
